캐릭터 선택화면 작업중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="kr.ac.kopo.termproject">
 
     <application
         android:allowBackup="true"
@@ -10,17 +10,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TermProject"
-        tools:targetApi="31">
+        android:theme="@style/Theme.TermProject">
+
+        <!-- Main Launcher Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- Character Selection Screen -->
+        <activity
+            android:name=".CharacterSelectionActivity"
+            android:exported="false" />
+
+        <!-- Continent Selection Screen -->
+        <activity
+            android:name=".ContinentSelectionActivity"
+            android:exported="false" />
+
+        <!-- Other Activities -->
+<!--        <activity android:name=".ChapterActivity" />-->
+<!--        <activity android:name=".CharacterCreationActivity" />-->
+<!--        &lt;!&ndash; TODO: 필요한 액티비티를 추가 등록 &ndash;&gt;-->
+
+    </application>
 </manifest>
